# Neural-Mesh-Protocol

./: .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFESTO.md  README.md  SPECIFICATION.md  build_output.txt  debug-log.txt  debug-sandbox.ts  dummy_logs.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm_output.txt  test-vm.cjs  test_pii.ts  vm-out.txt
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: docs.json  mint.json
docs/concepts/: architecture.mdx  client-concepts.mdx  logic-on-origin.mdx  manifesto.mdx  server-concepts.mdx  specification.mdx  wasi-sandboxing.mdx  zero-trust.mdx
docs/es/concepts/: architecture.mdx  client-concepts.mdx  logic-on-origin.mdx  manifesto.mdx  server-concepts.mdx  specification.mdx  wasi-sandboxing.mdx  zero-trust.mdx
docs/es/getting-started/: intro.mdx  quickstart.mdx
docs/es/mesh-node/: compilation.mdx  overview.mdx
docs/es/typescript-sdk/: client.mdx  (+2 more)
docs/getting-started/: intro.mdx  quickstart.mdx
docs/mesh-node/: compilation.mdx  overview.mdx
docs/rust-app/: compilation.mdx  overview.mdx
docs/typescript-sdk/: client.mdx  overview.mdx  server.mdx
examples/demos/: package.json  tsconfig.json
mesh-node/: Cargo.toml  README.md
mesh-node/nmp-server/: Cargo.toml
mesh-node/wasm-filter/: Cargo.toml
nmp-client/: Cargo.toml
nmp-client/src/: injector.rs  main.rs
nmp-core/: Cargo.toml  build.rs
nmp-core/proto/: nmp_core.proto
nmp-core/src/: lib.rs
nmp-server/: Cargo.toml
nmp-server/src/: executor.rs  grpc.rs  guardian.rs  main.rs  p2p.rs  tee.rs
protocol/: SPECIFICATION.md
protocol/proto/: nmp_core.proto
rust-app/: README.md
rust-app/nmp-core/: Cargo.toml
rust-app/nmp-server/: Cargo.toml
sdk/: .npmrc  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.workspace.ts
sdk/examples/: 1-mesh-discovery.ts  2-advanced-tools.ts  3-mcp-express-bridge.ts  4-resources-and-prompts.ts  mcp-bridge.ts
sdk/src/: bridge.ts  index.ts  server.ts  types.ts
sdk/tests/: bridge.test.ts  client.test.ts  server.test.ts
sdks/rust/: README.md
sdks/typescript/: .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
servers/mesh-node/: Cargo.toml  README.md
servers/mesh-node/src/: executor.rs  grpc.rs
typescript-sdk/: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
typescript-sdk/scripts/: test-kyber.ts
typescript-sdk/src/: bridge.ts  index.ts  server.ts  types.ts
wasm-filter/src/: main.rs
wasm-watchdog/src/: main.rs
(+157 files in other folders)
