[package]
name = "nmp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nmp-core = { path = "../nmp-core" }

# gRPC y Async
tonic = "0.11"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

# Networking P2P
libp2p = { version = "0.51", features = ["tcp", "noise", "yamux", "kad", "macros", "tokio"] }
futures = "0.3.32"
pqcrypto-kyber = "0.8.1"
aes-gcm = "0.10.3"
rand = "0.10.0"
pqcrypto-traits = "0.3.5"
