[package]
name = "nmp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nmp-core = { path = "../../sdks/rust/crates/core" }

# gRPC y Async
tonic = "0.11"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

# Logic-on-Origin Sandbox
wasmtime = "14.0.0"
wasmtime-wasi = "14.0.0"

# Networking P2P
libp2p = { version = "0.51", features = ["tcp", "noise", "yamux", "kad", "macros", "tokio"] }
futures = "0.3.32"
tokio-stream = "0.1.18"
wasmparser = "0.121.2"
anyhow = "1.0.102"
pqcrypto-kyber = "0.8.1"
aes-gcm = "0.10.3"
rand = "0.10.0"
pqcrypto-traits = "0.3.5"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
